syntax = "proto3";

option csharp_namespace = "Notion.Protos";

package user;

service UserManager {
  rpc GetUser(GetUserRequest) returns (GetUserResponce);

  rpc AuthUser(AuthUserRequest) returns (AuthUserResponce);

  rpc CreateUser (AddUserRequest) returns (AddUserResponce);
}

message AuthUserRequest{
	string login = 1;
	string password = 2;
}

message AuthUserResponce{
	string token = 1;
}

message GetUserRequest {
  string login = 1;
}

message GetUserResponce {
  int32 userId = 1;
  string login = 2;
}

message AddUserRequest {
  string login = 1;
  string password = 2;
}

message AddUserResponce {
  int32 userId = 1;
  string login = 2;
}